# direct-ocean-router

./: .gitignore  README.md  pyproject.toml  route.json  route_friesland.html  route_friesland.json  route_friesland_tss.html  route_map.html  test_route.py
configs/: basins.geojson  canals.yaml  grid_0.25nm.json  grid_0.5nm.json  grid_1nm.json  passages.yaml  routing_defaults.yaml  vessel_profiles.yaml
scripts/: build_all_resolutions.sh  build_basins_index.py  build_bathy_grid.py  build_density_grid.py  build_land_mask.py  build_tss_fields.py  validate_masks.py  visualize_route.py  visualize_route_html.py
src/ocean_router/: __init__.py
src/ocean_router.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ocean_router/api/: __init__.py  dependencies.py  endpoints.py  main.py  schemas.py
src/ocean_router/cli/: main.py  preprocess_cmd.py  route_cmd.py
src/ocean_router/core/: __init__.py  config.py  geodesy.py  grid.py  logging.py  memmaps.py  tiled_raster.py
src/ocean_router/data/: __init__.py  basins.py  bathy.py  canals.py  density.py  land.py  passages.py  tss.py  tss_vector.py
src/ocean_router/land/: __init__.py  land_guard.py
src/ocean_router/routing/: __init__.py  astar.py  astar_fast.py  astar_numba.py  corridor.py  costs.py  lane_graph.py  reconstruct.py  simplify.py  tss_hybrid.py
src/ocean_router/tss/: __init__.py  tss_graph.py  tss_strtree.py
tests/: test_land_guard.py  test_tss_graph.py  test_tss_strtree.py
tests/fixtures/: tss_lane.geojson
