[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocean-router"
version = "0.1.0"
description = "Corridor-limited ocean routing pipeline with land avoidance and TSS-aware costs"
authors = [{ name = "AutoDev" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "shapely>=2.0",
    "rasterio>=1.3",
    "pyproj>=3.6",
    "fiona>=1.9",
    "geopandas>=0.14",
    "networkx>=3.2",
    "pydantic>=2.5",
    "fastapi>=0.110",
    "uvicorn>=0.23",
    "orjson>=3.9",
    "typer>=0.9",
]

[project.optional-dependencies]
numba = ["numba>=0.58"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
